Update IPFS retrieval API.
